<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Africa Academy</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" tools:ignore="MissingTranslation">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="menu_send" translatable="false">Send</string>
    <string name="register">register</string>
    <string name="save_to_phone">save to phone</string>
    <string name="ok">OK</string>
    <string name="to_next">to next</string>
    <string name="congratulation_n_you_have_complete_the_course_n_nthank_you">congratulation\nyou have complete the course\nThank you</string>
    <string name="view_certificate">view certificate</string>
    <string name="take_quiz">quiz</string>
    <string name="part_one">part one</string>
    <string name="part_two">part two</string>
    <string name="final_exam">final exam</string>
    <string name="congratulation_n_next_part_is_unlocked">next part is unlocked</string>
    <string name="submit">submit</string>
    <string name="soryy_this_phone_has_been_registered_before_ntty_later">sorry this phone has been registered before. Tty later.</string>
    <string name="english">english</string>
    <string name="country">country</string>
    <string-array name="code">
        <item>+251</item>
        <item>+93</item>
        <item>+355</item>
        <item>+213</item>
        <item>+376</item>
        <item>+244</item>
        <item>+54</item>
        <item>+374</item>
        <item>+297</item>
        <item>+61</item>
        <item>+43</item>
        <item>+994</item>
        <item>+1242</item>
        <item>+973</item>
        <item>+880</item>
        <item>+1246</item>
        <item>+375</item>
        <item>+32</item>
        <item>+501</item>
        <item>+229</item>
        <item>+975</item>
        <item>+591</item>
        <item>387</item>
        <item>+267</item>
        <item>+55</item>
        <item>+673</item>
        <item>+359</item>
        <item>+226</item>
        <item>+257</item>
        <item>+855</item>
        <item>+237</item>
        <item>+1</item>
        <item>+238</item>
        <item>+235</item>
        <item>+56</item>
        <item>+86</item>
        <item>+61</item>
        <item>+57</item>
        <item>+269</item>
        <item>243</item>
        <item>+242</item>
        <item>+506</item>
        <item>+225</item>
        <item>+385</item>
        <item>+53</item>
        <item>+357</item>
        <item>+420</item>
        <item>+45</item>
        <item>+253</item>
        <item>+593</item>
        <item>+20</item>
        <item>+503</item>
        <item>+240</item>
        <item>+291</item>
        <item>+372</item>
        <item>+679</item>
        <item>+358</item>
        <item>+33</item>
        <item>+241</item>
        <item>+220</item>
        <item>+995</item>
        <item>+49</item>
        <item>+233</item>
        <item>+350</item>
        <item>+30</item>
        <item>+299</item>
        <item>+502</item>
        <item>+44</item>
        <item>+224</item>
        <item>+245</item>
        <item>+592</item>
        <item>+509</item>
        <item>+504</item>
        <item>+852</item>
        <item>+36</item>
        <item>+354</item>
        <item>+91</item>
        <item>+62</item>
        <item>+98</item>
        <item>+964</item>
        <item>+353</item>
        <item>+972</item>
        <item>+39</item>
        <item>+1876</item>
        <item>+81</item>
        <item>+44</item>
        <item>+962</item>
        <item>+7</item>
        <item>+254</item>
        <item>+686</item>
        <item>+965</item>
        <item>+996</item>
        <item>+371</item>
        <item>+961</item>
        <item>+266</item>
        <item>+231</item>
        <item>+218</item>
        <item>+423</item>
        <item>+370</item>
        <item>+352</item>
        <item>+389</item>
        <item>+261</item>
        <item>+265</item>
        <item>+60</item>
        <item>+960</item>
        <item>+223</item>
        <item>+356</item>
        <item>+222</item>
        <item>+230</item>
        <item>+52</item>
        <item>+691</item>
        <item>+373</item>
        <item>+377</item>
        <item>+976</item>
        <item>+382</item>
        <item>+1664</item>
        <item>+212</item>
        <item>+258</item>
        <item>+95</item>
        <item>+264</item>
        <item>+674</item>
        <item>+977</item>
        <item>+31</item>
        <item>+64</item>
        <item>+505</item>
        <item>+227</item>
        <item>+234</item>
        <item>+850</item>
        <item>+47</item>
        <item>+968</item>
        <item>+92</item>
        <item>+970</item>
        <item>+507</item>
        <item>+595</item>
        <item>+51</item>
        <item>+63</item>
        <item>+48</item>
        <item>+351</item>
        <item>+974</item>
        <item>+40</item>
        <item>+7</item>
        <item>+250</item>
        <item>+378</item>
        <item>+966</item>
        <item>+221</item>
        <item>+381</item>
        <item>+248</item>
        <item>+232</item>
        <item>+65</item>
        <item>+421</item>
        <item>+386</item>
        <item>+252</item>
        <item>+27</item>
        <item>+82</item>
        <item>+211</item>
        <item>+34</item>
        <item>+94</item>
        <item>+249</item>
        <item>+268</item>
        <item>+46</item>
        <item>+41</item>
        <item>+963</item>
        <item>+886</item>
        <item>+992</item>
        <item>+255</item>
        <item>+66</item>
        <item>+228</item>
        <item>+216</item>
        <item>+90</item>
        <item>+993</item>
        <item>+256</item>
        <item>+380</item>
        <item>+971</item>
        <item>+44</item>
        <item>+1</item>
        <item>+598</item>
        <item>+998</item>
        <item>+39</item>
        <item>+58</item>
        <item>+84</item>
        <item>+967</item>
        <item>+260</item>
        <item>+263</item>
    </string-array>
    <string name="attemt_all_question">please attempt  all the question.</string>
    <string name="take_the_previous_quiz">please take quiz of previous part first.</string>
    <string name="saved_to_phone">saved to Pictures folder</string>
    <string name="view_answers">view answers</string>
    <string name="sign_in">sign in</string>
    <string name="phone_international_format">phone(international format)</string>
    <string name="connet_internet">please connect to internet</string>
    <string name="unregistered_phone_number">unregistered phone number</string>
    <string name="registered_successfully">registered successfully</string>
    <string name="final_exam_taken">you already take final exam</string>
    <string name="follow_lecture">please read, watch or listen to the lecture first.</string>
    <string name="name">Name</string>
    <string name="phone">phone</string>
    <string name="emial_if_any">Emial (if any )</string>
    <string name="personal_information">Personal Information</string>
    <string name="register_new">register</string>
    <string name="login">Login</string>
    <string name="part_three">part three</string>
    <string name="part_four">part four</string>
    <string name="part_five">part five</string>
    <string name="part_six">part six</string>
    <string name="part_seven">part seven</string>
    <string name="part_eight">part eight</string>
    <string name="part_nine">part nine</string>
    <string name="part_ten">part ten</string>
    <string name="part_eleven">part eleven</string>
    <string name="part_twelve">part twelve</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="watch_youtube">watch youtube</string>
    <string name="listen_audio">listen</string>
    <string name="read_pdf">Read</string>
    <string name="fiqhulibadat">ففه العبادات</string>
    <string name="sheikh">በክቡር ሽይኽ ሙሀመድዘይን ዛህረዲን ኸሊል።</string>
    <string name="paper2">መማርያ</string>
    <string name="paper2_1">ትምትህርቱን በዩቱብ ፣ በድምፅ እንዲሁም በፅሁፍ ይከታተላሉ።</string>
    <string name="paper3">ምዘና</string>
    <string name="paper3_1">መልመጃዎችን በመስራት ራሶን ለማጠቃለያ ፈተና ያዘጋጃሉ።</string>
    <string name="paper4">ዕውቅና</string>
    <string name="paper4_1">ትምትህርቱን ካጠናቀቁ ቡሃላ ሰርተክፌዎን በነፃ ያገኛሉ።</string>
    <string name="get_started">get started</string>
    <string name="account_confirmed">account confirmed</string>
    <string name="user_info">info</string>
    <string name="email">email</string>
    <string name="language">language</string>
    <string name="setting">setting</string>
    <string name="more">more</string>
    <string name="ask_question">ask question</string>
    <string name="FAQ">FAQ</string>
    <string name="about">about</string>
    <string name="empty">empty</string>
    <string name="enter_your_question_here">enter your question here</string>
    <string name="minimum_letters">use at least 100 letters to explain</string>
    <string name="question_review">your question will be reviewed soon.</string>
    <string name="take_final_exam_first">take final exam first</string>
    <string name="version_1_0">version 1.0</string>
    <string name="part_thirteen">thirteen</string>
    <string name="part_fourteen">fourteen</string>
    <string name="part_fifteen">fifteen</string>
    <string name="read_the_previous_lesson">attend the previous part first</string>
    <string name="you_want_to_download_the_audio">you want to download the audio?</string>
    <string name="file_size">file size : 2.7 MB</string>
    <string name="download">download</string>
    <string name="cancel">cancel</string>
    <string name="certificate">certificate</string>
    <string name="swipe">swipe</string>
    <string name="log_out">log out</string>
    <string name="phone_number">phone number</string>
    <string name="clear">clear</string>
    <string name="logo">logo</string>
    <string name="your_progress_will_be_cleared">your progress will be cleared</string>
    <string name="please_asses_the_course">please asses the course</string>
    <string name="very_good">very good</string>
    <string name="good">good</string>
    <string name="bad">bad</string>
    <string name="done">done</string>
    <string name="teaching_performance">teaching performance</string>
    <string name="content_rating">Content rating</string>
    <string name="how_much_have_you_learned">How much have you learned?</string>
    <string name="more_than_70">More than 70%</string>
    <string name="less_than_40">Less than 40%</string>
</resources>