<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/please_asses_the_course"
                android:textColor="@color/colorPrimary"
                android:layout_margin="10dp"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:progressTint="@color/colorPrimary"
                android:numStars="5"
                android:id="@+id/rate"
                android:focusable="false"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bunny"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:text="@string/teaching_performance"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp">
                <RadioButton
                    android:id="@+id/r1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/very_good"
                    android:textColor="@color/colorPrimary"/>
                <RadioButton
                    android:id="@+id/r2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good"
                    android:textColor="@color/colorPrimary"/>
                <RadioButton
                    android:id="@+id/r3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bad"
                    android:textColor="@color/colorPrimary"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/bunny"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/content_rating"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="20dp">
                <RadioButton
                    android:id="@+id/r4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/very_good"
                    android:textColor="@color/colorPrimary"/>
                <RadioButton
                    android:id="@+id/r5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good"
                    android:textColor="@color/colorPrimary"/>
                <RadioButton
                    android:id="@+id/r6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bad"
                    android:textColor="@color/colorPrimary"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/bunny"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/how_much_have_you_learned"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp">
                <RadioButton
                    android:id="@+id/r7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_than_70"
                    android:textColor="@color/colorPrimary"/>
                <RadioButton
                    android:id="@+id/r8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="40% - 70%"
                    android:textColor="@color/colorPrimary"/>
                <RadioButton
                    android:id="@+id/r9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/less_than_40"
                    android:textColor="@color/colorPrimary"/>
            </RadioGroup>

            <Button
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:text="@string/done"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:background="@drawable/btnbgsolid"
                android:id="@+id/done"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>