<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/your_progress_will_be_cleared"
            android:textColor="@color/colorPrimary"
            android:layout_margin="15dp"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btnbgsolid"
            android:textColor="@color/white"
            android:text="@string/clear"
            android:id="@+id/clear"
            android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btnbgstroke"
            android:textColor="@color/colorPrimary"
            android:text="@string/cancel"
            android:id="@+id/cancel"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>