<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Setting">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_info"
                android:textAllCaps="true"
                android:layout_margin="10dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginBottom="10dp"
                app:cardElevation="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:cardCornerRadius="2dp"
                android:paddingBottom="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/user_name"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:gravity="center_vertical"
                            android:textColor="#000"
                            android:textAllCaps="true"
                            android:text="--------------"
                            android:layout_marginStart="5dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginStart="5dp"/>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:background="@color/colorPrimaryDark"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/user_phone"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:gravity="center_vertical"
                            android:textColor="#000"
                            android:textAllCaps="true"
                            android:text="--------------"
                            android:layout_marginStart="5dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/phone"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginStart="5dp"/>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:background="@color/colorPrimaryDark"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/user_emial"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:gravity="center_vertical"
                            android:textColor="#000"
                            android:textAllCaps="true"
                            android:text="--------------"
                            android:layout_marginStart="5dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginStart="5dp"/>
                    </LinearLayout>
                    <Button
                        android:id="@+id/view_certificate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/view_certificate"
                        android:background="@color/colorPrimaryDark"
                        android:textColor="@color/white"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textAllCaps="true"
                android:layout_margin="10dp"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="10dp"
                android:paddingBottom="5dp">
                <RelativeLayout
                    android:id="@+id/relative_layout_language"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:textAllCaps="true"
                        android:layout_marginStart="5dp"
                        android:layout_alignParentStart="true"
                        android:textColor="#000"/>
                    <TextView
                        android:id="@+id/current_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/english"
                        android:layout_marginEnd="10dp"
                        android:textAllCaps="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:textAllCaps="true"
                android:layout_margin="10dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:cardElevation="10dp"
                android:paddingBottom="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:gravity="center_vertical"
                        android:id="@+id/ask_question"
                        android:text="@string/ask_question"
                        android:textAllCaps="true"
                        android:layout_margin="10dp"
                        android:textColor="#000"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:background="@color/colorPrimaryDark"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:gravity="center_vertical"
                        android:id="@+id/faq"
                        android:text="@string/FAQ"
                        android:textAllCaps="true"
                        android:layout_margin="10dp"
                        android:textColor="#000"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:background="@color/colorPrimaryDark"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:gravity="center_vertical"
                        android:id="@+id/about"
                        android:text="@string/about"
                        android:textAllCaps="true"
                        android:layout_margin="10dp"
                        android:textColor="#000"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:background="@color/colorPrimaryDark"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/version_1_0"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>