<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <ImageView
        android:layout_marginTop="100dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        android:scaleType="centerInside"
        android:background="@drawable/btnbgstroke"
        android:layout_centerHorizontal="true"
        android:id="@+id/logo"/>


    <EditText
        android:id="@+id/login_phone"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="5dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="10dp"
        android:layout_below="@id/logo"
        android:background="@drawable/background"
        android:textColor="#000"
        android:textCursorDrawable="@null"
        android:layout_margin="25dp"
        android:gravity="start|center_vertical"
        android:textAlignment="viewStart"
        android:layout_centerHorizontal="true"
        android:textSize="17sp" />

        <Button
            android:layout_width="wrap_content"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:layout_height="35dp"
            android:text="@string/sign_in"
            android:id="@+id/sign_in"
            android:layout_below="@+id/login_phone"
            android:layout_centerHorizontal="true"
            android:textColor="#fff"
            android:background="@drawable/settingbtnbg"/>



    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cpb_background_progressbar_color="@color/background"
        app:cpb_background_progressbar_width="7dp"
        app:cpb_progress_direction="to_right"
        app:cpb_progressbar_color="@color/colorPrimary"
        app:cpb_indeterminate_mode="true"
        app:cpb_progressbar_width="5dp"
        app:cpb_round_border="true"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_phone"
        android:id="@+id/sign_in_progress_bar"/>
</RelativeLayout>

